FIX: fix color contrast on modals and adjust font size of browse books title on smaller screens

--- a/readersrealm/static/css/style.css
+++ b/readersrealm/static/css/style.css
@@ -182,7 +182,7 @@ footer {
 
 @media screen and (max-width: 320px) {
     .browse-books-title {
-        font-size: 70%!important;
+        font-size: 90%!important;
     }
 } 
 
